<resources>
    <string name="app_name">Lesson4</string>
    <string name="button_7">7</string>
    <string name="ClearButton">C</string>
    <string name="button_4">4</string>
    <string name="button_1">1</string>
    <string name="percent_button">%</string>
    <string name="digit_button">÷</string>
    <string name="button_8">8</string>
    <string name="button_5">5</string>
    <string name="button_2">2</string>
    <string name="button_0">0</string>
    <string name="multiplyButton">x</string>
    <string name="button_9">9</string>
    <string name="button_6">6</string>
    <string name="button_3">3</string>
    <string name="dotButton">.</string>
    <string name="optionButton">⋮</string>
    <string name="minusButton">-</string>
    <string name="plusButton">+</string>
    <string name="equalsButton">=</string>
    <string name="buttonReturn">Вернуться</string>
    <string name="textviewLightTheme">Светлая тема</string>
    <string name="textviewDarkTheme">Тёмная тема</string>
</resources>