<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/num1View"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:enabled="false"
        android:gravity="end"
        android:inputType="number"
        android:paddingEnd="@dimen/padding_end"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/resultView"
        app:layout_constraintEnd_toStartOf="@+id/symbolView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/symbolView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:gravity="end"
        android:paddingEnd="@dimen/padding_end"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/resultView"
        app:layout_constraintEnd_toStartOf="@+id/num2View"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num1View"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/num2View"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:enabled="false"
        android:gravity="end"
        android:inputType="number"
        android:paddingEnd="@dimen/padding_end"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/resultView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/symbolView"
        tools:ignore="RtlSymmetry,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingEnd="@dimen/padding_end"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:context="ru.gb.lesson5.MainActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEnd"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ClearButton"
                app:cornerRadius="@dimen/cornerRadius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_7"
                app:cornerRadius="@dimen/cornerRadius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_4"
                app:cornerRadius="@dimen/cornerRadius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_1"
                app:cornerRadius="@dimen/cornerRadius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPercent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/percent_button"
                app:cornerRadius="@dimen/cornerRadius" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEnd"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDigit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/digit_button"
                app:cornerRadius="@dimen/cornerRadius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_8"
                app:cornerRadius="@dimen/cornerRadius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_5"
                app:cornerRadius="@dimen/cornerRadius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_2"
                app:cornerRadius="@dimen/cornerRadius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_0"
                app:cornerRadius="@dimen/cornerRadius" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEnd"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonMultiply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multiplyButton"
                app:cornerRadius="@dimen/cornerRadius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_9"
                app:cornerRadius="@dimen/cornerRadius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_6"
                app:cornerRadius="@dimen/cornerRadius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_3"
                app:cornerRadius="@dimen/cornerRadius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dotButton"
                app:cornerRadius="@dimen/cornerRadius" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonOption"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/optionButton"
                app:cornerRadius="@dimen/cornerRadius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonMinus"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/minusButton"
                app:cornerRadius="@dimen/cornerRadius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPlus"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/plusButton"
                app:cornerRadius="@dimen/cornerRadius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEquals"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/equalsButton"
                app:cornerRadius="@dimen/cornerRadius" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>