<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/radioButtonLightTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@android:drawable/btn_radio"
            android:text="@string/textviewLightTheme" />

        <RadioButton
            android:id="@+id/radioButtonDarkTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@android:drawable/btn_radio"
            android:text="@string/textviewDarkTheme" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonReturn" />
    </RadioGroup>
</LinearLayout>